syntax = "proto3";

option go_package = "./pb";

package test;

message TestMessage {
  string name = 1;
  int32 i32 = 2;
  int64 i64 = 3;
  bool b = 4;
  float f = 5;
  repeated int32 i32_list = 6;
  map<string, string> m = 7;
}

message InitSeed {
  uint32 encodeSeed = 1;
  uint32 decodeSeed = 2;
}

message HeartBeatRequest {
  int64 timestamp = 1;
}

message HeartBeatResponse {
  int64 requestTimestamp = 1;
  int64 responseTimestamp = 2;
}
